<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".anadir">
    <item android:title="@string/anadir"
        android:id="@+id/action_agregar"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:title="@string/eliminar"
        android:id="@+id/action_eliminar"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never"/>
    <item android:title="@string/editar"
        android:id="@+id/action_editar"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="never"/>
    <item android:title="@string/estado"
        android:id="@+id/action_estado"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="never"/>
    <item android:title="@string/title"
        android:id="@+id/action_uno"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>